# docs/swagger.json
@@ -13,6 +13,25 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/health": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Проверка работоспособности сервиса",
+                "responses": {
+                    "200": {
+                        "description": "Service healthy",
+                        "schema": {
+                            "$ref": "#/definitions/docs.HealthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/pullRequest/create": {
             "post": {
                 "security": [
@@ -472,6 +491,17 @@
                     }
                 },
                 "team_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "docs.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
